[package]
name = "rusttd"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5.0"
kurinji = { git = "https://github.com/Sheepyhead/kurinji", branch = "bevy_main"}
bevy_mod_picking = {path = "../bevy_mod_picking"}
rand = "0.8.4"
bevy-inspector-egui = { git = "https://github.com/jakobhellermann/bevy-inspector-egui", branch = "bevy-main"}
bevy_asset_loader = { path = "../bevy_asset_loader/bevy_asset_loader"}
pathfinding = "2.2.1"
strum = "0.21"
strum_macros = "0.21"

[patch.crates-io]
bevy = { git = "https://github.com/bevyengine/bevy" }

# Optimization
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1